SERVER-55416 Tenant migration donor shouldn't fetch keys if cancelation token has been canceled